<?xml version="1.0" encoding="utf-8"?>
 <resources>
<string name="app_name">Simple Weather</string>
<string name="action_settings">Settings</string>
<string name="developed_by">Developed by Infinite Dreams</string>
<string name="add">Find your City</string>
<string name="city">City :</string>
<string name="country">Country :</string>
<string name="add_city">Add City</string>
<string name="voice_search_city">Voice Search</string>
<string name="refresh">Refresh</string>
<string name="setting">Settings</string>
<string name="delete">Delete</string>
<string name="humidity">Humidity</string>
<string name="pressure">Pressure</string>
<string name="wind_speed">Wind Speed</string>
<string name="Sun">Sun</string>
<string name="rise">Sun Rise</string>
<string name="set">Sun Set</string>
<string name="coordinates">Coordinates</string>
<string name="longi">Longitude</string>
<string name="lati">Latitude</string>
<string name="last_refreshed">Last Refreshed -</string>
<string name="city_not_found">City not found</string>
<string name="no_data_connection">Connection is not available, Check Data Connection</string>
<string name="city_exists">City already exists</string>
<string name="max_cities_error">Maximum 10 cities can be added, Delete an Entry</string>
<string name="stt_not_supported">Your device does not support Speech to Text</string>
<string name="not_a_city">This is not a City</string>
<string name="time_format">Time Format</string>
<string name="temp_format">Temperature Format</string>
<string name="wind_speed_format">Wind Speed Format</string>
<string name="help">Help</string>
<string name="about">About</string>
<string name="terms_condi">Terms \u0026 Conditions</string>
<string name="app_settings">Settings</string>
<string name="application_info">Information</string>
<string name="tell_city_name">City Name Please</string>
<string name="tell_country_name">Country Name Please</string>
<string name="search">Search</string>
<string name="fetching_data">Fetching Data From Server....</string>
<string name="refresh_done">Data is Updated\t</string>
<string name="locale_not_supported_voice">Currently Voice search is available only for English, Please enter the details.</string>
<string name="weather_200">thunderstorm with light rain</string>
<string name="weather_201">thunderstorm with rain</string>
<string name="weather_202">thunderstorm with heavy rain</string>
<string name="weather_210">light thunderstorm</string>
<string name="weather_211">thunderstorm</string>
<string name="weather_212">heavy thunderstorm</string>
<string name="weather_221">ragged thunderstorm</string>
<string name="weather_230">thunderstorm with light drizzle</string>
<string name="weather_231">thunderstorm with drizzle</string>
<string name="weather_232">thunderstorm with heavy drizzle</string>
<string name="weather_300">light intensity drizzle</string>
<string name="weather_301">drizzle</string>
<string name="weather_302">heavy intensity drizzle</string>
<string name="weather_310">light intensity drizzle rain</string>
<string name="weather_311">drizzle rain</string>
<string name="weather_312">heavy intensity drizzle rain</string>
<string name="weather_313">shower rain and drizzle</string>
<string name="weather_314">heavy shower rain and drizzle</string>
<string name="weather_321">shower drizzle</string>
<string name="weather_500">light rain</string>
<string name="weather_501">moderate rain</string>
<string name="weather_502">heavy intensity rain</string>
<string name="weather_503">very heavy rain</string>
<string name="weather_504">extreme rain</string>
<string name="weather_511">freezing rain</string>
<string name="weather_520">light intensity shower rain</string>
<string name="weather_521">shower rain</string>
<string name="weather_522">heavy intensity shower rain</string>
<string name="weather_531">ragged shower rain</string>
<string name="weather_600">light snow</string>
<string name="weather_601">snow</string>
<string name="weather_602">heavy snow</string>
<string name="weather_611">sleet</string>
<string name="weather_612">shower sleet</string>
<string name="weather_615">light rain and snow</string>
<string name="weather_616">rain and snow</string>
<string name="weather_620">light shower snow</string>
<string name="weather_621">shower snow</string>
<string name="weather_622">heavy shower snow</string>
<string name="weather_701">mist</string>
<string name="weather_711">smoke</string>
<string name="weather_721">haze</string>
<string name="weather_731">sand, dust whirls</string>
<string name="weather_741">fog</string>
<string name="weather_751">sand</string>
<string name="weather_761">dust</string>
<string name="weather_762">volcanic ash</string>
<string name="weather_771">squalls</string>
<string name="weather_781">tornado</string>
<string name="weather_800">clear sky</string>
<string name="weather_801">few clouds</string>
<string name="weather_802">scattered clouds</string>
<string name="weather_803">broken clouds</string>
<string name="weather_804">overcast clouds</string>
<string name="weather_900">tornado</string>
<string name="weather_901">tropical storm</string>
<string name="weather_902">hurricane</string>
<string name="weather_903">cold</string>
<string name="weather_904">hot</string>
<string name="weather_905">windy</string>
<string name="weather_906">hail</string>
<string name="weather_951">calm</string>
<string name="weather_952">light breeze</string>
<string name="weather_953">gentle breeze</string>
<string name="weather_954">moderate breeze</string>
<string name="weather_955">fresh breeze</string>
<string name="weather_956">strong breeze</string>
<string name="weather_957">high wind, near gale</string>
<string name="weather_958">gale</string>
<string name="weather_959">severe gale</string>
<string name="weather_960">storm</string>
<string name="weather_961">violent storm</string>
<string name="weather_962">hurricane</string>
<string name="version">Version:</string>
<string name="app_details">Simple Weather is a free weather application to check current weather parameters.</string>
<string name="app_by">Developed by Infinite Dreams</string>
<string name="email">Email :</string>
<string name="rate_us">Rate Us</string>
<string name="help_day">Denotes the day time.</string>
<string name="help_night">Denotes the night time.</string>
<string name="help_manual">Allow to add city manually.</string>
<string name="help_voice_search">Speak city and country name to add. \nCurrently supported only for English.</string>
<string name="help_refresh">Update the latest data from Server.</string>
<string name="help_settings">Settings for changing data formats.</string>
<string name="help_delete">Delete existing entry.</string>
<string name="terms_condition_title">Terms and Conditions</string>
<string name="no_data_warning">No data found</string>
<string name="city_name_hint">City name..</string>
<string name="country_name_hint">Country name..</string>
<string name="language_not_supported">Unsupported Character/Language, Change Keypad Language to English.</string>
<string name="enter_both_input_data_warning">Enter both Country and City names</string>
<string name="terms_condition_desc">1. Simple weather application fetches the weather information from OpenWeatherMap.\n
                                    2. Date and Time are fetched from WorldWeatherOnline. \n
                                    3. Application does not complaint to accuracy of any of the parameters that are displayed.\n
                                    4. Actual time may vary slightly from the time being fetched from the server.</string>
    <!-- translation not required -->
    <string name="celcius">\u2103</string>
    <string name="kelvin">\u212A</string>
    <string name="mps">Mps</string>
    <string name="kmph">Kmph</string>
    <string name="hpa">hPa</string>
    <string name="percent">\u0025</string>
    <string name="app_developer_id">infinitedreamsyo@gmail.com</string>
    <string name="app_version">2.6</string>
    <string name="twelve_hr">12 Hr Format</string>
<string name="twenty_four_hr">24 Hr Format</string>
<string name="system_format">System Format</string>
</resources>