<menu xmlns:android="http://schemas.android.com/apk/res/android" >


    <group android:id="@+id/action_menu">
    <item
        android:id="@+id/action_add"
        android:orderInCategory="1"
        android:showAsAction="always"
        android:title="@string/add_city"
        android:icon="@drawable/ic_action_new"/>
     <item
        android:id="@+id/action_speak_search"
        android:orderInCategory="2"
        android:showAsAction="always"
        android:title="@string/voice_search_city"
        android:icon="@drawable/ic_action_mic"/>
       
    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="3"
        android:showAsAction="always"
        android:title="@string/refresh"
        android:icon="@drawable/ic_action_refresh"/>   
    
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="4"
        android:showAsAction="always"
        android:title="@string/setting"        
        android:icon="@drawable/ic_action_settings"
        />
    
    <item
        android:id="@+id/action_delete"
        android:orderInCategory="5"
        android:showAsAction="always"
        android:title="@string/delete"
        android:icon="@drawable/ic_action_delete"
        />
            
    </group>

</menu>
