<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp" >

        <TextView
            android:id="@+id/app_header_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/app_version_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/app_header_info"
            android:text="@string/version"
            android:textColor="@color/black"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/app_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/app_version_label"
            android:layout_marginTop="2dp"
            android:text="@string/app_details"
            android:textColor="@color/black"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/app_by"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/app_details"
            android:layout_marginTop="2dp"
            android:text="@string/app_by"
            android:textColor="@color/black"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/app_developer_mail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/app_by"
            android:textColor="@color/black"
            android:text="@string/app_developer_id"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="italic"
            android:layout_marginBottom="5dp"
            />

        <ImageView
            android:id="@+id/divider"
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_below="@+id/app_developer_mail"
            android:layout_marginTop="2dp"
            android:background="@color/lumia_blue" />

        <Button
            android:id="@+id/rate_us"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/divider"
            android:layout_centerHorizontal="true"
            android:background="@color/white"
            android:text="@string/rate_us" />
    </RelativeLayout>

</ScrollView>